#38316 Read aliased types with their aliases, add comments